# Windy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  imgui.ini  readme.md  roadmap.md
cmake/: include.cmake  jolt.cmake
precompiled/: whdz.h
shaders/: shader.slang
src/: imconfig.h  imgui_glfw_vulkan_exm.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/backends/: imgui_impl_glfw.h  imgui_impl_vulkan.h
src/core/: base.h  camera_component.h  component.h  entity.h  entry_point.cpp  event.h  event_system.h  log.cpp  log.h  material.h  mesh.h  mesh_component.h  physics_component.h  resource.h  resource_handle.h  resource_manager.h  texture.h  transform_component.h  uuid.cpp  uuid.h  vertex.h
src/imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_freetype.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h
src/shaders/: test.slang
